[project]
name = "testflinger-yaml-sdk"
version = "0.1.0"
description = ""
authors = [
    {name = "Zhongning Li",email = "zhongning.li@canonical.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "testflinger-yaml-sdk", from = 'src' }]

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
